syntax = "proto3";

option java_package = "io.hansendesade.countryAPI";

service CountryProvider {
    rpc calculateValue( CalculationRequest ) returns ( CalculationReply ) {}
}

message CalculationRequest {
    int64 countryId = 1;
    int32 multiplier = 2;
}

message CalculationReply {
    int32 calculationResult = 1;
}


